[package]
name = "usv"
version = "0.10.1"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "USV: Unicode Separated Values (USV) for data markup. This is for spreadsheets, databases, content management, and more. This builds on ASCII Separated Values (ASV) and contrasts with Comma Separated Values (CSV)."
readme = "README.md"
repository = "https://github.com/sixarm/usv/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["usv", "unicode", "data", "spreadsheet", "markup"]
categories = ["encoding", "data-structures", "database", "parsing", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = ">= 0.5"
rand = ">= 0.8"
csv = "1"

[[bench]]
name = "usv_and_csv"
harness = false
